# Phonetisaurus

./: .travis.yml  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac
python/: setup.py
src/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
